# pyRMS

./: .gitignore  LICENSE  README.md  environment.yml  pairwise_rms.ipynb  pyproject.toml  rms_calculator.py
.personal_use/: Dopamine.py
.personal_use/reports/: Dopamine NMR violations.csv  rms_report_multi_min_20251107_155704.txt  rms_report_multi_min_sel_backbone_and_not_resn_LDP_20251107_160150.txt  rms_report_multi_min_sel_not_resn_LDP_20251107_155704.txt  rms_report_multi_min_sel_resn_LDP_20251107_155926.txt
examples/: 1A1T.py
examples/reports/: rms_report_1A1T_20251107_152734.txt  rms_report_1A1T_20251107_161638.txt  rms_report_1A1T_sel_chain_A_and_backbone_20251107_161638.txt  rms_report_1A1T_sel_chain_A_and_not_resn_ZN_20251107_152735.txt  rms_report_1A1T_sel_chain_A_and_not_resn_ZN_20251107_161638.txt  rms_report_1A1T_sel_resn_A_G_C_U_20251107_152735.txt  rms_report_1A1T_sel_resn_A_G_C_U_20251107_161638.txt
