[project]
name = "pyRMS"
version = "0.1.0"
description = "A PyMOL utility for pairwise RMSD analysis."
readme = "README.md"
authors = [
    { name = "Eric Largy", email = "pairwise@seis.me" }
]
license = { text = "MIT" }
requires-python = ">=3.11"

# Dependencies that can be installed via pip (PyMOL itself is Conda-installed)
dependencies = [
    "typing-extensions>=4.0.0",
    "pathlib>=1.0"
]

[project.urls]
Homepage = "https://github.com/yourusername/pyRMS"
Issues = "https://github.com/yourusername/pyRMS/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pyrms"]
include-package-data = true
